# ellatu

./: .gitignore  LICENSE  README.md  ellatu.py  ellatu_bot.py  ellatu_db.py  ellatu_main.py  mapper.ebnf  mapper.py  pyproject.toml  setup.cfg  testing.py
src/: ellatu.py  ellatu_bot.py  ellatu_db.py  ellatu_main.py  image_editing.py  mapper.ebnf  mapper.py  mapper_pipeline.py  testing.py
src/ellatu/: document_editor.py  ellatu.py  ellatu_bot.py  ellatu_db.py  ellatu_main.py  image_editing.py  mapper.ebnf  mapper.py  mapper_pipeline.py
