[metadata]
name = ellatu
version = 0.0.2
description = Ellatu is framework for building text based games 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sixkey/ellatu
license = BSD 3-clause
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
