[metadata]
name = ellatu
version = 0.0.13
description = Ellatu is framework for building text based games 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sixkey/ellatu
license = BSD 3-clause
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    discord 
    pillow 
    tatsu
    numpy 
    pymongo 
    pymongo[srv]
    pygraphviz 
    python-dotenv

[options.package_data]
* = *.ebnf

[options.packages.find]
where = src
